cmake_minimum_required(VERSION 3.5)

project(LAFORE_CH12_EX6_WRITE_WORKER_AND_FIND_BY_NUMBER LANGUAGES CXX)

set(CMAKE_INCLUDE_CURRENT_DIR ON)

set(CMAKE_AUTOUIC ON)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

find_package(Qt5Core)

add_executable(LAFORE_CH12_EX6_WRITE_WORKER_AND_FIND_BY_NUMBER main.cpp)
target_link_libraries(LAFORE_CH12_EX6_WRITE_WORKER_AND_FIND_BY_NUMBER Qt5::Core)
